Fix jumping page bug with placeholders

--- a/src/components/CardGrid/CardGrid.scss
+++ b/src/components/CardGrid/CardGrid.scss
@@ -31,4 +31,7 @@
       }
     }
   }
+  &__placeholder {
+    aspect-ratio: 1 / 1.3;
+  }
 }
